--- a/templates/views/admin.hbs
+++ b/templates/views/admin.hbs
@@ -63,9 +63,6 @@
     opacity: 1;
 
   }
-
-
-
   @media screen and (max-width: 900px) {
     .main-container {
       display: flex;
@@ -88,9 +85,6 @@
     }
   }
 
-
-
-
   @media screen and (max-width: 600px) {
     .main-container {
       margin-top: rem;
@@ -109,7 +103,7 @@
 
   <nav class="navbar bg-light">
     <div class="container">
-      <a class="navbar-brand" href="/"><img class="logo" width="40px"
+      <a class="navbar-brand" href="https://airbnb-vga7.onrender.com/"><img class="logo" width="40px"
           src="https://cdn-icons-png.flaticon.com/512/2111/2111320.png" alt=""></a>
       <div class="d-flex">
         
@@ -178,13 +172,8 @@
                       </form>
                     </div>
 
-
-
 					
                     <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
-
-
-
 
 
                       <!-- Admin signup starts here -->
