--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -633,7 +633,7 @@
 
 <script>
 async function getdata(){
- var Hoteldata = await fetch("https://airbnb-vga7.onrender.com/users")
+ var Hoteldata = await fetch("https://airbnb-vga7.onrender.com//users")
  var data2 = await Hoteldata.json()
  apenddata(data2.Hotels)
 
