--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -6,8 +6,11 @@
     box-sizing: border-box;
 }
 		img{
-			height: 25vh;
-			width: 100%;		
+			height: 32vh;
+			width: 100%;
+			border-radius: 50%;
+			
+
 		}
   
 	#newbox{
@@ -24,12 +27,15 @@
 	margin: 1px;
 	
 }
+p{
+	color:red;
+}
 
 @media(max-width:920px) {
     #newbox{
         width: 100%;
 		
-		  flex-direction: column;
+    	  flex-direction: column;
         justify-content: center;
         align-items: center;
 		
@@ -509,7 +515,7 @@
 		class="homefooter bg-light text-center text-lg-start fixed-bottom shadow-custom w-100 d-flex justify-content-between ">
 		<!-- Copyright -->
 		<div class="p-2 ms-5">
-			<span class="px-2"> © 2020 Copyright: </span>
+			<span class="px-2"> © 2023 Copyright: </span>
 			<span class="px-2">· Privacy</span>
 			<span class="px-2">· Terms</span>
 			<span class="px-2">· Sitemap</span>
