--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -144,7 +144,7 @@
     
 </div>
   
-  <div class="alert alert-success container alert-dismissible fade show" role="alert">
+  <div class="alert alert-success container alert-dismissible fade show "id="alertbox" role="alert">
     Login Successfully...😍
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
@@ -561,7 +561,9 @@ function apenddata(data){
 
    })
 }
+
 </script>
+
 
 </body>
 
