--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -8,7 +8,7 @@
 		img{
 			height: 32vh;
 			width: 100%;
-			border-radius: 50%;
+			border-radius: 4%;
 			
 
 		}
@@ -28,7 +28,7 @@
 	
 }
 p{
-	color:red;
+	color:grey;
 }
 
 @media(max-width:920px) {
